--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
 </head>
   <body class="bg-gray-900 text-gray-100">
     <div id="root"></div>
+    <!-- Entry point for Vite/React app -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
